Fixed landscape mode - use just layout-land instead of layout-large-land so that it works on phones. Fixed location of Total time, and centering of the times rows in landscape view, and spacing in options

--- a/app/src/main/res/layout-land/newflight.xml
+++ b/app/src/main/res/layout-land/newflight.xml
@@ -523,7 +523,8 @@
 
         <TableLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal">
 
             <TableRow
                 android:layout_width="fill_parent"
@@ -710,6 +711,7 @@
             </TableRow>
         </TableLayout>
 
+        <!-- Properties -->
         <TextView
             android:id="@+id/txtPinnedPropertiesHeader"
             style="@style/DividerBar"
