--- a/app/src/main/res/layout/calctime.xml
+++ b/app/src/main/res/layout/calctime.xml
@@ -27,7 +27,7 @@
         android:textStyle="bold" />
 
     <TableLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal">
 
@@ -74,7 +74,7 @@
         android:layout_height="wrap_content" />
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_gravity="center_horizontal">
@@ -83,6 +83,7 @@
             android:id="@+id/btnCopySegement"
             style="?android:attr/borderlessButtonStyle"
             android:layout_width="100dp"
+            android:drawableStart="@drawable/ic_action_copy"
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:textAlignment="center"
