Prep for v3 upgrade:  - fixed spacing issue in create user  - lower minimum SDK to 17  - bump version number and code.

--- a/app/src/main/res/layout/newuser.xml
+++ b/app/src/main/res/layout/newuser.xml
@@ -280,6 +280,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 style="?android:attr/buttonBarStyle"
+                android:layout_marginEnd="10dp"
                 android:text="@string/lblCancel" />
 
             <Button
@@ -287,6 +288,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
+                android:layout_marginStart="10dp"
                 android:text="@string/lblCreateAccount"
                 style="?android:attr/buttonBarStyle"
                 android:textStyle="bold" />
