--- a/app/src/main/res/layout/flightquery.xml
+++ b/app/src/main/res/layout/flightquery.xml
@@ -415,6 +415,12 @@
                 android:text="@string/ffTelemetry" />
 
             <CheckBox
+                android:id="@+id/ckHasImages"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/ffImages" />
+
+            <CheckBox
                 android:id="@+id/ckHasXC"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
