Issue #49: Change the Save button to do GPX instead of KML, get full-resolution from the server (or use pending/existing flight data).   - New support for FlightPathForFlightGPX in RecentFlightsSvc   - New getFlightDataStringAsGPX in LocSample   - Request permissions to write to external storage, if they have no already been granted.

--- a/app/src/main/res/layout/flightmap.xml
+++ b/app/src/main/res/layout/flightmap.xml
@@ -36,10 +36,10 @@
 
             <ImageButton
                 style="?android:attr/buttonBarStyle"
-                android:id="@+id/btnExportKML"
+                android:id="@+id/btnExportGPX"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:contentDescription="@string/txtShareKML"
+                android:contentDescription="@string/txtShareGPX"
                 android:src="@drawable/ic_action_save"
                 android:text="" />
 
