--- a/app/src/main/res/layout/cpttableitem.xml
+++ b/app/src/main/res/layout/cpttableitem.xml
@@ -18,14 +18,17 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:layout_gravity="center_vertical"
+        android:layout_gravity="center_vertical|start"
+        android:textAlignment="textStart"
+        android:padding="4dp"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/txtValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
+        android:layout_gravity="center_vertical|end"
+        android:padding="4dp"
         android:textStyle="bold" />
 
     <TextView
