--- a/app/src/main/res/layout/cpttableitem.xml
+++ b/app/src/main/res/layout/cpttableitem.xml
@@ -25,8 +25,9 @@
 
     <TextView
         android:id="@+id/txtValue"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:layout_gravity="center_vertical|end"
         android:padding="4dp"
         android:textStyle="bold" />
